# PontusColor-For-Davinci

./: CMakeLists.txt  INSTALL.md  Info.plist  README.md  build_mac.command  build_windows.bat  install_windows.bat
.github/workflows/: build.yml
src/: PontusColorCUDA.cu  PontusColorKernel.h  PontusColorMetal.mm  PontusColorMetalEntry.metal  PontusColorOpenCL.cpp  PontusColorOpenCLEntry.cl  PontusColorPlugin.cpp
tools/: gamut.py  test_kernel.cpp
